--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "feathers-objection": "^4.6.3",
     "helmet": "^3.21.2",
     "knex": "^0.20.4",
+    "mqtt": "^3.0.0",
     "mssql": "^6.0.1",
     "objection": "^1.6.11",
     "serve-favicon": "^2.5.0",
