--- a/package.json
+++ b/package.json
@@ -41,14 +41,18 @@
     "@feathersjs/transport-commons": "^4.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-knex": "^7.1.0",
     "feathers-objection": "^4.6.3",
+    "feathers-sequelize": "^6.1.0",
     "helmet": "^3.21.2",
     "knex": "^0.20.4",
     "mqtt": "^3.0.0",
     "mssql": "^6.0.1",
     "mysql": "^2.17.1",
+    "mysql2": "^2.1.0",
     "node-datetime": "^2.1.2",
     "objection": "^1.6.11",
+    "sequelize": "^5.21.3",
     "serve-favicon": "^2.5.0",
     "winston": "^3.2.1"
   },
